# railslide-blog

./: .gitignore  CNAME  CONTRIBUTORS.md  Makefile  Pipfile  README.md  about.html  advent-of-code-reflections-of-a-first-timer.html  anaconda-vs-sublime-python-ide.html  archives.html  authors.html  categories.html  create-gpg-key-with-subkeys.html  dotfiles.html  encrypt-removable-disk-ubuntu-1404.html  exploring-xmonad-getting-started.html  fabfile.py  going-full-in-with-neovim.html  gpg-reading-resources.html  hello-vagrant.html  how-to-override-pytest-django-settings-discovery-order.html  how-to-release-aka-git-tags.html  how-to-resolve-screen-flickering-in-arch.html  how-to-sign-pgp-keys-with-offline-master-key.html  index.html  index2.html  index3.html  index4.html  kybc-yogosha-2021-maze-1-writeups.html  kybc-yogosha-2021-maze-2-writeup.html  kybc-yogosha-2021-maze-3-writeup.html  kybc-yogosha-2021-writeups.html  learning-vim-in-2022.html  make-pyenv-and-pyright-play-nice-together.html  managing-multiple-git-identities.html  managing-virtual-machines-with-qemu.html  newarticle.py  oh-btw-i-use-arch.html  pelican-github-pages.html  pelicanconf.py  (+22 more)
author/: giulia-vergottini.html  giulia-vergottini2.html  giulia-vergottini3.html
category/: cryptography.html  ctf.html  dev.html  dev2.html  linux.html  pelican.html  python-utilities.html  python.html  til.html  tiling-window-managers.html  ubuntu.html  utilities.html
content/: anaconda-vs-sublime-python-ide.md  anaconda-vs-sublimepythonide.md  create-gpg-key-with-subkeys.md  dotfiles.md  draft.md  encrypt-removable-disk-ubuntu-1404.md  gpg-reading-resources.md  hello-vagrant.md  how-to-override-pytest-django-settings-discovery-order.md  how-to-release-aka-git-tags.md  how-to-sign-gpg-external-master-key.md  pelican-github-pages.md  provisioning-vagrant-with-ansible.md  pyvenv-virtualenvwrapper.md  subvenv-v1-0-0.md  travis-mock-afternoon-of-frustration.md  up-and-running.md  virtualenwrapper-ubuntu-python3.md
drafts/: .html  ansible-dotfiles-on-steroid.html  title.html  (+11 more)
(+143 files in other folders)
