[project]
name = "railslide-blog"
version = "0.1.0"
description = "My personal blog"
authors = [{name = "Giulia Vergottini"}]

requires-python = ">=3.11"

dependencies = [
  "pelican[markdown]",
  "ghp-import",
]

[project.optional-dependencies]
dev = [
  "pip-tools",
  "ruff",
]

[tool.ruff]
# In addition to the standard set of exclusions, omit Pelican config files.
extend-exclude = ["pelicanconf.py", "publishconf.py"]

[tool.ruff.lint]
# 1. Enable isort (`I`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "I"]

# The stuff below are needed so that pip-tools and setuptools works nicely together
# See https://github.com/jazzband/pip-tools/issues/1711#issuecomment-1666650423
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
