[project]
name = "railslide-blog"
version = "1.0.0"
description = "My personal blog"
authors = [{name = "Giulia Vergottini"}]

requires-python = ">=3.11"

dependencies = [
  "pelican[markdown]",
  "ghp-import",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
# In addition to the standard set of exclusions, omit Pelican config files.
extend-exclude = ["pelicanconf.py", "publishconf.py"]

[tool.ruff.lint]
# 1. Enable isort (`I`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "I"]

